# pydentity

./: pyproject.toml  readme.md  requirements.txt  setup.cfg
docs/: conf.py  index.rst
docs/source/: modules.rst  pydenticore.authentication.interfaces.rst  pydenticore.authentication.rst  pydenticore.authorization.interfaces.rst  pydenticore.authorization.rst  pydenticore.hashers.rst  pydenticore.http.rst  pydenticore.interfaces.rst  pydenticore.interfaces.stores.rst  pydenticore.resources.rst  pydenticore.rst  pydenticore.security.claims.rst  pydenticore.security.rst  pydenticore.token_providers.rst  pydenticore.types.rst  pydenticore.utils.rst  pydenticore.validators.rst
example/fastapi/: app.py
pydenticore/: __init__.py  dataprotector.py  identity_error.py  identity_error_describer.py  identity_options.py  identity_result.py  loggers.py  lookup_normalizer.py  role_manager.py  signin_manager.py  user_claims_principal_factory.py  user_confirmation.py  user_manager.py
pydenticore/authentication/: __init__.py  _base.py
pydenticore/authorization/: __init__.py  _base.py
pydenticore/hashers/: __init__.py  password_hasher.py
pydenticore/http/: context.py
pydenticore/interfaces/: __init__.py  password_hasher.py  password_validator.py  role_validator.py  token_provider.py  user_claims_principal_factory.py  user_confirmation.py  user_validator.py
pydenticore/resources/: __init__.py
pydenticore/token_providers/: __init__.py  rfc6238service.py  token_provider.py
pydenticore/types/: __init__.py  decorators.py
pydenticore/utils/: __init__.py
pydenticore/validators/: __init__.py  password_validator.py  role_validator.py  user_validator.py
pydentity/: __init__.py  dataprotector.py  default_personal_data_protector.py  default_user_confirmation.py  identity_error.py  identity_error_describer.py  identity_options.py  identity_result.py  loggers.py  lookup_normalizer.py  password_hasher.py  password_validator.py  rfc6238service.py  role_manager.py  role_validator.py  signin_manager.py  signin_result.py  token_provider.py  types.py  user_claims_principal_factory.py  user_confirmation.py  user_login_info.py  user_manager.py  user_validator.py
pydentity/abc/: __init__.py  context.py  lookup_normalizer.py  password_hasher.py  password_validator.py  personal_data_protector.py  role_validator.py  token_provider.py  (+3 more)
tests/: conftest.py  test___init__.py  test_claims.py  test_dataprotector.py  test_default_personal_data_protector.py  test_lookup_normalizer.py  test_password_hasher.py  test_password_validator.py  test_principal_factory.py  test_rfc6238.py  test_rfc6238_authentication_service.py  test_rfc6238service.py  test_role_manager.py  test_role_validator.py  test_serializer.py  test_token_provider.py  test_user_claims_principal_factory.py  test_user_manager.py  test_user_validator.py  test_utils.py
(+122 files in other folders)
